使用 hutool 生成 JWT Token